--- a/src/componentes/titulo/Titulo.css
+++ b/src/componentes/titulo/Titulo.css
@@ -1,23 +1,8 @@
 .Titulo{
-    color: green;
+    color: whitesmoke;
     font-family: 'Montserrat', sans-serif;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     font-weight: 700;
     text-transform: uppercase;
 }
 
-.subTitulo{
-    color: violet;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2.1rem;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-.ruta{
-    color: gold;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2.1rem;
-    font-weight: 700;
-    text-transform: uppercase;
-}
